--- a/[Jocelyn_Baduria]_HW5_HPO_257_ML.ipynb
+++ b/[Jocelyn_Baduria]_HW5_HPO_257_ML.ipynb
@@ -993,7 +993,7 @@
       "source": [
         "## DecisionTreeClassifier(max_depth=7),\n",
         "##  MLPClassifier(solver='lbfgs',alpha=1, max_iter=1000)\n",
-        "Data Narrative: Classification Accuracy above 95%"
+        "Data Narrative: Classification Accuracy above 95%. MLP got the highest accuracy of 97.49%"
       ]
     },
     {
